# SistemasDistribuidos

AWS/LogIn/: LogIn.html  lambda_function.py
AWS/PostComment/: lambda_function.py  postComment.html
AWS/read/: lambda_function.py  readPosts.html
AWS/recuperacion/: lambda_function.py  recuperacion.html
AWS/registro/: lambda_function.py  regsitro.html
Clases Remotas - Kubernetes/dockerFileManager/: Dockerfile  filemanager-deployment.yaml  filemanager-service.yaml
Clases Remotas - Kubernetes/dockerMultMatrix/: Dockerfile  multMatrix-deployment.yaml  multMatrix-service.yaml
Clases Remotas - Kubernetes/dockerMultMatrix/source/: CMakeCache.txt  CMakeLists.txt  Makefile  clientMultMatrix  clientMultMatrix.cpp  cmake_install.cmake  main_multMatrix.cpp  multMatrix  multMatrix_imp.h  multMatrix_stub.h  multmatrix.cpp  multmatrix.h  operaciones.h  resultado.txt  resultado2.txt  serverMultMatrix  serverMultMatrix.cpp  utils.cpp  utils.h
Clases Remotas/fileManager/: CMakeCache.txt  Makefile  clientFileManager  clientFileManager.cpp  (+5 more)
Ejemplo0SisDis/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  client.cpp  cmake_install.cmake  operaciones.h  server  server.cpp
Practica1FileManager/: CMakeLists.txt  clientFileManager  clientFileManager.cpp  fileManager_imp.h  fileManager_stub.h  operaciones.h
Practica1FileManager/Practica1FileManager-main/: CMakeCache.txt  clientFileManager
Practica1MultMatrix/: CMakeCache.txt  Makefile  README.md  clientMultMatrix.cpp  multMatrix_imp.h  multMatrix_stub.h  multmatrix.h  operaciones.h  serverMultMatrix.cpp
(+18 files in other folders)
